gap correct projets

--- a/style/style.css
+++ b/style/style.css
@@ -573,7 +573,7 @@ section#projets {
   justify-content: flex-start;
   align-items: center;
   padding: 0;
-  gap: 25px;
+  gap: 45px;
   box-sizing: border-box;
 }
 
